:sparkles: feat: add a lot of funcions time4j #4

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@ HELP.md
 .gradle
 build/
 logs/
+plugin/src/main/groovy/org.unify4j/test/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+!**/src/main/org.unify4j/test/**
 plugin/build/
 plugin/bin/
 
